--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.14",
+    "@heroicons/vue": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.4",
+    "preline": "^1.9.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
